disable config module for now
It's too hard to design it